Final de Inicio

--- a/Proyecto con puntos de corte/inicio.html
+++ b/Proyecto con puntos de corte/inicio.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="partsheader">
-            <h1 class="titleprincipal">4Mathics</h1>
+            <h1 class="titleprincipal"><span>4</span>Mathics</h1>
             <nav>
                 <a class="fijo" href="">Inicio</a>
                 <a href="">Cursos</a>
@@ -28,23 +28,25 @@
         <section>
             <div class="containerinicio">
                 <h1>¿Por qué estudiar Matemáticas?</h1>
-                <p>Las matemáticas son una materia fundamental en nuestra vida diaria. Nos ayudan a entender el mundo
-                    que nos rodea y a tomar decisiones informadas. Desde calcular el cambio en una tienda hasta
-                    planificar una ruta de viaje, las matemáticas están presentes en muchas situaciones cotidianas. <br>
-                    Además, estudiar matemáticas desarrolla habilidades importantes como el pensamiento lógico, la
-                    resolución de problemas y la capacidad de análisis. Estas habilidades son valiosas en cualquier
-                    campo de estudio o trabajo, y pueden ayudarnos a tener éxito en nuestras metas personales y
-                    profesionales. <br>
-                    Por último, las matemáticas también tienen un lado fascinante y hermoso. Desde las simetrías en la
-                    naturaleza hasta los misterios del universo, las matemáticas nos permiten explorar y comprender el
-                    mundo de una manera única. <br>
-                    En resumen, estudiar matemáticas es importante porque nos ayuda a entender el mundo, desarrollar
-                    habilidades valiosas y explorar la belleza de la matemática. <b>¡Así que no tengas miedo de
-                        sumergirte en el fascinante mundo de las matemáticas!</b></p>
                 <div>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/RlUZv0MoVWk"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
+                    <p>Las matemáticas son una materia fundamental en nuestra vida diaria. Nos ayudan a entender el mundo
+                        que nos rodea y a tomar decisiones informadas. Desde calcular el cambio en una tienda hasta
+                        planificar una ruta de viaje, las matemáticas están presentes en muchas situaciones cotidianas. <br>
+                        Además, estudiar matemáticas desarrolla habilidades importantes como el pensamiento lógico, la
+                        resolución de problemas y la capacidad de análisis. Estas habilidades son valiosas en cualquier
+                        campo de estudio o trabajo, y pueden ayudarnos a tener éxito en nuestras metas personales y
+                        profesionales. <br>
+                        Por último, las matemáticas también tienen un lado fascinante y hermoso. Desde las simetrías en la
+                        naturaleza hasta los misterios del universo, las matemáticas nos permiten explorar y comprender el
+                        mundo de una manera única. <br>
+                        En resumen, estudiar matemáticas es importante porque nos ayuda a entender el mundo, desarrollar
+                        habilidades valiosas y explorar la belleza de la matemática. <b>¡Así que no tengas miedo de
+                            sumergirte en el fascinante mundo de las matemáticas!</b></p>
+                    <div>
+                        <iframe width="400" height="300" src="https://www.youtube.com/embed/RlUZv0MoVWk"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
+                    </div>
                 </div>
             </div>
         </section>
@@ -143,7 +145,15 @@
         </section>
     </main>
     <footer>
-        <div class="contenedorfooter">
+        <div class="containerfooter">
+            <img src="imagenes/pi.png" alt="">
+            <h2>4Mathics</h2>
+            <div class="separador"></div>
+            <div class="redes">
+                <a href=""><img src="imagenes/facebook.png" alt=""></a>
+                <a href=""><img src="imagenes/twitter.png" alt=""></a>
+                <a href=""><img src="imagenes/instagram.png" alt=""></a>
+            </div>
         </div>
     </footer>
 </body>
