Modificaciones finales a cursos. Faltan efectos

--- a/Proyecto con puntos de corte/cursos.html
+++ b/Proyecto con puntos de corte/cursos.html
@@ -14,18 +14,16 @@
 
 <body>
     <header>
-        <div class="partsheader">
-            <h1 class="titleprincipal">4Mathics</h1>
-            <nav>
-                <a href="">Inicio</a>
-                <a class="fijo" href="">Cursos</a>
-                <a href="">Publicaciones</a>
-                <a href="">Soporte</a>
-            </nav>
-        </div>
+        <h1 class="titleprincipal"><span>4</span>Mathics</h1>
+        <nav>
+            <a href="">Inicio</a>
+            <a class="fijo" href="">Cursos</a>
+            <a href="">Publicaciones</a>
+            <a href="">Soporte</a>
+        </nav>
     </header>
     <main>
-        <section id="intro">
+        <section>
             <div class="containerintro">
                 <h1>Convertite en un experto <br> con nuestros cursos.</h1>
                 <button>Comenzar</button>
@@ -74,15 +72,15 @@
         <section>
             <div class="test">
                 <h2>Todos nuestro cursos incluyen un examen al final del mismo.</h2>
-                <img src="pics/test.png" alt="">
+                <div class="imgtest"></div>
             </div>
         </section>
         <section>
-            <div class="descriptioncontainer">
+            <div class="containerdescription">
                 <div class="description">
                     <h3>Curso de Introducción a las derivadas</h3>
                     <h4>Temario:</h4>
-                    <div class="specialcontainer1">
+                    <div class="listaimagen">
                         <ul>
                             <li>Tangente en un punto.</li>
                             <li>Pendiente de la recta tangente.</li>
@@ -95,17 +93,17 @@
                             <li>Puntos críticos e intervalos de crecimiento y decrecimiento.</li>
                             <li>Evaluación</li>
                         </ul>
-                        <div></div>
+                        <div class="image1"></div>
                     </div>
-                    <button>Empezar el curso</button>
+                    <button>Ver mas</button>
                 </div>
-                <div class="imgcontainer1">
-                    <div></div>
+                <div class="vacio">
+                    <div class="img1"></div>
                 </div>
                 <div class="description">
-                    <h3>Curso de Introducción a las Integrales</h3>
+                    <h3>Curso de Introducción a las integrales</h3>
                     <h4>Temario:</h4>
-                    <div class="specialcontainer2">
+                    <div class="listaimagen">
                         <ul>
                             <li>Derivada y antiderivada.</li>
                             <li>Integrando y diferencial de integración.</li>
@@ -118,17 +116,17 @@
                             <li>Integración por partes.</li>
                             <li>Evaluación.</li>
                         </ul>
-                        <div></div>
+                        <div class="image2"></div>
                     </div>
-                    <button>Empezar el curso</button>
+                    <button>Ver mas</button>
                 </div>
-                <div class="imgcontainer2">
-                    <div></div>
+                <div class="vacio">
+                    <div class="img2"></div>
                 </div>
                 <div class="description">
-                    <h3>Curso de Cálculo Integral</h3>
+                    <h3>Curso de Introducción a las derivadas</h3>
                     <h4>Temario:</h4>
-                    <div class="specialcontainer3">
+                    <div class="listaimagen">
                         <ul>
                             <li>Aproximación de areas: la suma de Riemann.</li>
                             <li>Los límites de integración.</li>
@@ -141,15 +139,30 @@
                             <li>Integrales impropias.</li>
                             <li>Evaluación.</li>
                         </ul>
-                        <div></div>
+                        <div class="image3"></div>
                     </div>
-                    <button>Empezar el curso</button>
+                    <button>Ver mas</button>
                 </div>
-                <div class="imgcontainer3">
-                    <div></div>
+                <div class="vacio">
+                    <div class="img3"></div>
                 </div>
             </div>
         </section>
+    </main>
+    <footer>
+        <footer>
+            <div class="containerfooter">
+                <img src="imagenes/pi.png" alt="">
+                <h2>4Mathics</h2>
+                <div class="separador"></div>
+                <div class="redes">
+                    <a href=""><img src="imagenes/facebook.png" alt=""></a>
+                    <a href=""><img src="imagenes/twitter.png" alt=""></a>
+                    <a href=""><img src="imagenes/instagram.png" alt=""></a>
+                </div>
+            </div>
+        </footer>
+    </footer>
 </body>
 
 </html>
