acomodado todo, agregue footer y header a cada pagina. linkee el header correctamente. pto de corte del formulario. empieza biblioteca.

--- a/Proyecto con puntos de corte/form.html
+++ b/Proyecto con puntos de corte/form.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="pics/favicon.ico" type="ico" sizes="16px">
+    <link rel="icon" href="imagenes/favicon.ico" type="ico" sizes="16px">
     <link rel="stylesheet" href="form.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,23 +13,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
-    <title>4Mathics</title>
+    <title>4Mathics - Soporte</title>
 </head>
 
 <body>
     <header>
-        <div class="parth-1">
-            <h1>4</h1>
-            <h1 class="tit">Mathics</h1>
-        </div>
-        <div class="parth-2">
+        <div class="partsheader">
+            <h1 class="titleprincipal"><span>4</span>Mathics</h1>
             <nav>
-                <ul>
-                    <li class="itul"><a href="index.html">Inicio</a></li>
-                    <li class="itul"><a href="courses.html">Cursos</a></li>
-                    <li class="itul"><a href="biblio.html">Biblioteca</a></li>
-                    <li class="itul bgb"><a href="form.html">Soporte</a></li>
-                </ul>
+                <a href="inicio.html">Inicio</a>
+                <a href="cursos.html">Cursos</a>
+                <a href="biblio.html">Bibliografia</a>
+                <a class="fijo" href="">Soporte</a>
             </nav>
         </div>
     </header>
@@ -71,35 +66,14 @@
         </div>
     </main>
     <footer>
-        <div class="socialfooter">
-            <div class="socialicon f">
-                <a href="https://www.facebook.com" target="_blank" alt="facebook"><img src="pics/facebook.png"></a>
-                <a href="https://www.facebook.com" target="_blank">Facebook</a>
-            </div>
-            <div class="socialicon t">
-                <a href="https://twitter.com" target="_blank" alt="twitter"><img src="pics/gorjeo.png"></a>
-                <a href="https://twitter.com" target="_blank">Twitter</a>
-
-            </div>
-            <div class="socialicon i">
-                <a href="https://www.instagram.com" target="_blank" alt="instagram"><img src="pics/instagram.png"></a>
-                <a href="https://www.instagram.com" target="_blank">Instagram</a>
-
-            </div>
-        </div>
-        <div class="footer-logo">
-            <img src="pics/favicon.ico" alt="Logo de TuPagina">
-            <h3>4Mathics</h3>
-        </div>
-        <div class="secfooter">
-            <div class="supportfooter">
-                <a href="support.html"><img src="pics/soporte-tecnico.png" alt="soporte"></a>
-                <a href="support.html">Soporte</a>
-            </div>
-            <div class="rights">
-                <p>Todos los derechos reservados </p>
-                <p class="bluetext"> © </p>
-                <p> 4Mathics 2023</p>
+        <div class="containerfooter">
+            <img src="imagenes/pi.png" alt="">
+            <h2>4Mathics</h2>
+            <div class="separador"></div>
+            <div class="redes">
+                <a href=""><img src="imagenes/facebook.png" alt=""></a>
+                <a href=""><img src="imagenes/twitter.png" alt=""></a>
+                <a href=""><img src="imagenes/instagram.png" alt=""></a>
             </div>
         </div>
     </footer>
