--- a/Proyecto con puntos de corte/inicio.html
+++ b/Proyecto con puntos de corte/inicio.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="imagenes/favicon.ico" type="ico" sizes="16px">
     <link rel="stylesheet" href="inicio.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,9 +19,9 @@
             <h1 class="titleprincipal"><span>4</span>Mathics</h1>
             <nav>
                 <a class="fijo" href="">Inicio</a>
-                <a href="">Cursos</a>
-                <a href="">Publicaciones</a>
-                <a href="">Soporte</a>
+                <a href="cursos.html">Cursos</a>
+                <a href="biblio.html">Bibliografia</a>
+                <a href="form.html">Soporte</a>
             </nav>
         </div>
     </header>
