+ efectos a botones, sombras

--- a/Proyecto con puntos de corte/cursos.html
+++ b/Proyecto con puntos de corte/cursos.html
@@ -29,10 +29,10 @@
         <section>
             <div class="containerintro">
                 <h1>Convertite en un experto <br> con nuestros cursos.</h1>
-                <button>Comenzar</button>
+                <a href="#comienzo">Comenzar</a>
             </div>
         </section>
-        <section>
+        <section  id="comienzo">
             <div class="containercursos">
                 <div class="curso">
                     <h4>Curso</h4>
@@ -44,7 +44,7 @@
                         que desean adquirir una sólida base en derivadas y desbloquear su potencial en el mundo
                         del cálculo diferencial.</p>
                     <span>10 Clases</span>
-                    <button>Ver más</button>
+                    <a href="#derivadadescription">Ver más</a>
                 </div>
                 <div class="curso">
                     <h4>Curso</h4>
@@ -56,7 +56,7 @@
                         Además, te familiarizarás con técnicas de integración, como integración por sustitución
                         y por partes, que te permitirán resolver una amplia gama de problemas.</p>
                     <span>10 Clases</span>
-                    <button>Ver más</button>
+                    <a href="#integraldescription">Ver más</a>
                 </div>
                 <div class="curso">
                     <h4>Curso</h4>
@@ -68,14 +68,14 @@
                         Aprenderás cómo calcular integrales indefinidas y cómo utilizarlas para calcular áreas,
                         volúmenes, longitudes de arco y otros problemas relacionados.</p>
                     <span>10 Clases</span>
-                    <button>Ver más</button>
+                    <a href="#calcdescription">Ver más</a>
                 </div>
             </div>
         </section>
         <section>
             <div class="test">
-                <h2>Todos nuestro cursos incluyen un examen al final del mismo.</h2>
-                <div class="imgtest"></div>
+                <h2>Todos nuestro cursos incluyen <br> un examen al final del mismo.</h2>
+                <div class="imgtest"  id="derivadadescription"></div>
             </div>
         </section>
         <section>
@@ -98,7 +98,7 @@
                         </ul>
                         <div class="image1"></div>
                     </div>
-                    <button>Ver mas</button>
+                    <button id="integraldescription">Ver mas</button>
                 </div>
                 <div class="vacio">
                     <div class="img1"></div>
@@ -121,13 +121,13 @@
                         </ul>
                         <div class="image2"></div>
                     </div>
-                    <button>Ver mas</button>
+                    <button id="calcdescription">Ver mas</button>
                 </div>
                 <div class="vacio">
                     <div class="img2"></div>
                 </div>
                 <div class="description">
-                    <h3>Curso de Introducción a las derivadas</h3>
+                    <h3>Curso de Calculo Integral</h3>
                     <h4>Temario:</h4>
                     <div class="listaimagen">
                         <ul>
