--- a/Proyecto con puntos de corte/form.html
+++ b/Proyecto con puntos de corte/form.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="imagenes/favicon.ico" type="ico" sizes="16px">
+    <link rel="icon" href="imagenes/2fav.ico" type="ico" sizes="16px">
     <link rel="stylesheet" href="form.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
