comenzando css de foro

--- a/Proyecto con puntos de corte/cursos.html
+++ b/Proyecto con puntos de corte/cursos.html
@@ -20,7 +20,7 @@
         <nav>
             <a href="inicio.html">Inicio</a>
             <a class="fijo" href="">Cursos</a>
-            <a href="biblio.html">Biblioteca</a>
+            <a href="opinion.html">Foro</a>
             <a href="form.html">Soporte</a>
         </nav>
     </div>
