--- a/Proyecto con puntos de corte/form.html
+++ b/Proyecto con puntos de corte/form.html
@@ -23,7 +23,7 @@
             <nav>
                 <a href="inicio.html">Inicio</a>
                 <a href="cursos.html">Cursos</a>
-                <a href="biblio.html">Bibliografia</a>
+                <a href="opinion.html">Foro</a>
                 <a class="fijo" href="">Soporte</a>
             </nav>
         </div>
