--- a/Proyecto con puntos de corte/inicio.html
+++ b/Proyecto con puntos de corte/inicio.html
@@ -20,7 +20,7 @@
             <nav>
                 <a class="fijo" href="">Inicio</a>
                 <a href="cursos.html">Cursos</a>
-                <a href="biblio.html">Bibliografia</a>
+                <a href="opinion.html">Foro</a>
                 <a href="form.html">Soporte</a>
             </nav>
         </div>
