el ultimo commit

--- a/Proyecto con puntos de corte/inicio.html
+++ b/Proyecto con puntos de corte/inicio.html
@@ -118,30 +118,30 @@
             <div class="containersecundario">
                 <h1>Nuestros cursos</h1>
                 <div class="cartas">
-                    <div>
+                    <a href="cursos.html">
                         <div class="imgextra1"></div>
                         <h2>Cálculo diferencial</h2>
                         <p>Adentrate en el mundo de las derivadas con este curso.</p>
-                    </div>
-                    <div>
+                    </a>
+                    <a href="cursos.html">
                         <div class="imgextra2"></div>
                         <h2>Cálculo Integral</h2>
                         <p>Estudia a fondo las Integrales y aprende a calcular cualquier área!</p>
-                    </div>
-                    <div>
+                    </a>
+                    <a href="cursos.html">
                         <div class="imgextra3"></div>
                         <h2>Análisis Matemático</h2>
                         <p>¿Te gustan los desafios? Hace todo junto con este curso.</p>
-                    </div>
+                    </a>
                 </div>
             </div>
         </section>
         <section>
             <div class="containertercero">
                 <div class="containerextra">
-                    <div>Consultá los mejores libros de matemática</div>
+                    <div>¡Tu opinion es importante!</div>
                 </div>
-                <button>¡QUIERO VERLO!</button>
+                <a href="opinion.html">IR AL FORO</a>
             </div>
         </section>
     </main>
