correcciones en opinion

--- a/Proyecto con puntos de corte/opinion.html
+++ b/Proyecto con puntos de corte/opinion.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="input-item2">
                     <textarea name="op" id="input" placeholder="Contanos que opinas!.."></textarea>
-                    <button @click="colgarOpinion" class="botoninput">Enviar opinion</button>
+                    <button @click="colgarOpinion" class="botoninput">Enviar</button>
                 </div>
             </div>
             <div class="opinionCont">
