--- a/Proyecto con puntos de corte/cursos.html
+++ b/Proyecto con puntos de corte/cursos.html
@@ -18,7 +18,7 @@
         <div class="partsheader">
         <h1 class="titleprincipal"><span>4</span>Mathics</h1>
         <nav>
-            <a href="inicio.html">Inicio</a>
+            <a href="index.html">Inicio</a>
             <a class="fijo" href="">Cursos</a>
             <a href="opinion.html">Foro</a>
             <a href="form.html">Soporte</a>
