--- a/Proyecto con puntos de corte/form.html
+++ b/Proyecto con puntos de corte/form.html
@@ -21,7 +21,7 @@
         <div class="partsheader">
             <h1 class="titleprincipal"><span>4</span>Mathics</h1>
             <nav>
-                <a href="inicio.html">Inicio</a>
+                <a href="index.html">Inicio</a>
                 <a href="cursos.html">Cursos</a>
                 <a href="opinion.html">Foro</a>
                 <a class="fijo" href="">Soporte</a>
