--- a/Proyecto con puntos de corte/opinion.html
+++ b/Proyecto con puntos de corte/opinion.html
@@ -18,7 +18,7 @@
         <div class="partsheader">
             <h1 class="titleprincipal"><span>4</span>Mathics</h1>
             <nav>
-                <a href="inicio.html">Inicio</a>
+                <a href="index.html">Inicio</a>
                 <a href="cursos.html">Cursos</a>
                 <a class="fijo" href="">Foro</a>
                 <a href="form.html">Soporte</a>
